<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.sookmyung.umbrellafriend.ui.join.JoinInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_join_info_title"
            style="@style/Heading3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:maxLength="20"
            android:text="@string/join_info_title"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/ns_join_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/ns_join_info"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_join_info_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_join_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:background="@color/white">

                <TextView
                    android:id="@+id/tv_join_info_name_title"
                    style="@style/Body5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/profile_name_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_join_info_name"
                    style="@style/Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/shape_gray100_fill_12_rect"
                    android:hint="@string/profile_name_hint"
                    android:maxLength="20"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="12dp"
                    android:text="@={vm.name}"
                    android:textColor="@color/gray_1100"
                    android:textColorHint="@color/gray_400"
                    app:layout_constraintTop_toBottomOf="@id/tv_join_info_name_title" />

                <TextView
                    android:id="@+id/tv_join_info_student_id_title"
                    style="@style/Body5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:text="@string/profile_student_id_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_join_info_name" />

                <EditText
                    android:id="@+id/et_join_info_student_id"
                    style="@style/Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/shape_gray100_fill_12_rect"
                    android:hint="@string/profile_student_id_hint"
                    android:inputType="number"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="15dp"
                    android:text="@={vm.studentId}"
                    android:textColor="@color/gray_1100"
                    android:textColorHint="@color/gray_400"
                    app:layout_constraintTop_toBottomOf="@id/tv_join_info_student_id_title" />

                <TextView
                    android:id="@+id/tv_join_info_phone_title"
                    style="@style/Body5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:text="@string/profile_phone_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_join_info_student_id" />

                <EditText
                    android:id="@+id/et_join_info_phone"
                    style="@style/Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/shape_gray100_fill_12_rect"
                    android:hint="@string/profile_phone_hint"
                    android:inputType="number"
                    android:maxLength="11"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="15dp"
                    android:text="@={vm.phoneNumber}"
                    android:textColor="@color/gray_1100"
                    android:textColorHint="@color/gray_400"
                    app:layout_constraintTop_toBottomOf="@id/tv_join_info_phone_title" />

                <TextView
                    android:id="@+id/tv_join_info_email_title"
                    style="@style/Body5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:text="@string/profile_email_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_join_info_phone" />

                <EditText
                    android:id="@+id/et_join_info_email"
                    style="@style/Body2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="6dp"
                    android:background="@drawable/shape_gray100_fill_12_rect"
                    android:hint="@string/profile_email"
                    android:maxLength="25"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="15dp"
                    android:text="@={vm.email}"
                    android:textColor="@color/gray_1100"
                    android:textColorHint="@color/gray_400"
                    app:layout_constraintEnd_toStartOf="@id/tv_join_info_email_domain"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_join_info_email_title" />

                <TextView
                    android:id="@+id/tv_join_info_email_domain"
                    style="@style/Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:background="@drawable/shape_gray100_fill_12_rect"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="12dp"
                    android:text="@string/profile_email_domain"
                    android:textColor="@color/gray_1100"
                    app:layout_constraintBottom_toBottomOf="@id/et_join_info_email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/et_join_info_email" />

                <TextView
                    android:id="@+id/tv_join_info_password_title"
                    style="@style/Body5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:text="@string/profile_password_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_join_info_email" />

                <EditText
                    android:id="@+id/et_join_info_password"
                    style="@style/Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/shape_gray100_fill_12_rect"
                    android:hint="profile_password"
                    android:inputType="textPassword"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="15dp"
                    android:text="@={vm.password}"
                    android:textColor="@color/gray_1100"
                    android:textColorHint="@color/gray_400"
                    app:layout_constraintTop_toBottomOf="@id/tv_join_info_password_title" />

                <EditText
                    android:id="@+id/et_join_info_password_check"
                    style="@style/Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/shape_gray100_fill_12_rect"
                    android:hint="profile_password_check"
                    android:inputType="textPassword"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="12dp"
                    android:text="@={vm.password2}"
                    android:textColor="@color/gray_1100"
                    android:textColorHint="@color/gray_400"
                    app:layout_constraintTop_toBottomOf="@id/et_join_info_password" />

                <TextView
                    android:id="@+id/tv_join_info_password_condition"
                    style="@style/Caption1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="104dp"
                    android:text="@string/profile_password_condition"
                    android:textColor="@color/gray_600"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_join_info_password_check" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <TextView
            android:id="@+id/btn_next"
            style="@style/Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:background="@{vm.isJoin ? @drawable/shape_mainblue_fill_12_rect : @drawable/shape_gray300_fill_12_rect}"
            android:clickable="@{vm.isJoin}"
            android:gravity="center"
            android:paddingVertical="15dp"
            android:text="@string/complete"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:background="@drawable/shape_gray300_fill_12_rect" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>