<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_splash_entry_sub_title"
            style="@style/Body3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="69dp"
            android:text="@string/splash_sub_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_splash_entry_title"
            style="@style/Logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/splash_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_splash_entry_sub_title" />

        <ImageView
            android:id="@+id/iv_splash_character"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="43dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/ic_character"
            app:layout_constraintDimensionRatio="1.4:1"
            app:layout_constraintTop_toBottomOf="@id/tv_splash_entry_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_splash_entry_login"
            style="@style/Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="72dp"
            android:background="@drawable/selector_login_btn"
            android:padding="15dp"
            android:stateListAnimator="@null"
            android:text="@string/splash_login_title"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_splash_character" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_splash_entry_join"
            style="@style/Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/selector_join_btn"
            android:padding="15dp"
            android:stateListAnimator="@null"
            android:text="@string/splash_join_title"
            android:textColor="@color/main_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_splash_entry_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>