<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_test"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_rental_bottomsheet_title"
            style="@style/Title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/rental_bottomsheet_title"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_rental_bottomsheet"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_big_umbrella"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_rental_bottomsheet_title" />

        <TextView
            android:id="@+id/tv_rental_bottomsheet_umbrella_num"
            style="@style/Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/shape_lightblue_fill_17_rect"
            android:paddingHorizontal="16dp"
            android:paddingVertical="5dp"
            android:textColor="@color/main_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_rental_bottomsheet"
            tools:text="우산 번호 01" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_rental_bottomsheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_gray100_fill_12_rect"
            android:paddingBottom="19dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_rental_bottomsheet_umbrella_num">

            <TextView
                android:id="@+id/tv_rental_bottomsheet_name"
                style="@style/Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:text="@string/rental_bottomsheet_name_default"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_rental_bottomsheet_studentId"
                style="@style/Body4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/rental_bottomsheet_studentId_default"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_rental_bottomsheet_name" />

            <TextView
                android:id="@+id/tv_rental_bottomsheet_date"
                style="@style/Body4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@id/tv_rental_bottomsheet_date_notice"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_rental_bottomsheet_studentId"
                tools:text="2024/03/06 ~ 2024/03/09" />

            <TextView
                android:id="@+id/tv_rental_bottomsheet_date_notice"
                style="@style/Body4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rental_bottomsheet_date_notice"
                android:textColor="@color/sub_orange"
                app:layout_constraintBottom_toBottomOf="@id/tv_rental_bottomsheet_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_rental_bottomsheet_date"
                app:layout_constraintTop_toTopOf="@id/tv_rental_bottomsheet_date"
                app:layout_constraintVertical_chainStyle="packed" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_bottom_sheet_back"
            style="@style/Subtitle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape_gray400_fill_12_rect"
            android:outlineProvider="none"
            android:paddingVertical="20dp"
            android:text="@string/cancle"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_bottom_sheet_do"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_rental_bottomsheet" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_bottom_sheet_do"
            style="@style/Subtitle1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shape_mainblue_fill_12_rect"
            android:outlineProvider="none"
            android:text="@string/btn_rental_bottom_sheet_yes"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/btn_bottom_sheet_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_bottom_sheet_back"
            app:layout_constraintTop_toTopOf="@id/btn_bottom_sheet_back" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
